<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinator"
        tools:context="com.udacity.moviesapp.ui.DetailActivity">

        <android.support.design.widget.AppBarLayout
            style="@style/AppTheme.AppBarOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

                <ImageView
                    android:id="@+id/iv_poster_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />


            </android.support.design.widget.CollapsingToolbarLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_detail"
                style="@style/AppTheme.PopupOverlay"
                android:fitsSystemWindows="true"
                android:minHeight="?attr/actionBarSize"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:background="?attr/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/five_dp"
                    android:layout_marginStart="@dimen/five_dp"
                    android:layout_marginTop="@dimen/five_dp">

                    <ImageView
                        android:id="@+id/iv_backdoor"
                        android:layout_width="@dimen/thumb_width"
                        android:layout_height="@dimen/thumb_height"
                        android:layout_marginStart="@dimen/eight_dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sixteen_dp"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:text="@string/release_data"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/iv_backdoor"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_release_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="12-2-2018" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sixteen_dp"
                        android:layout_marginTop="@dimen/fifty_dp"
                        android:text="@string/rating"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/iv_backdoor"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/eighty_six"
                        android:layout_height="@dimen/eighty_dp"
                        android:layout_marginEnd="@dimen/thirty_two_dp"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_release_data"
                        app:srcCompat="@drawable/ic_star_24dp" />

                    <TextView
                        android:id="@+id/tv_user_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/thirty_dp"
                        android:layout_marginTop="@dimen/twenty_eight"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="@+id/imageView"
                        tools:text="5/6" />


                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/eight_dp"
                        android:layout_marginTop="@dimen/twenty"
                        android:text="@string/overview"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_backdoor" />

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/eight_dp"
                        android:layout_marginStart="@dimen/eight_dp"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:lines="3"
                        android:textSize="@dimen/text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5"
                        tools:text="@string/movie_desc" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/eight_dp"
                        android:layout_marginTop="@dimen/eight_dp"
                        android:text="@string/reviews"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/two_hundred_dp"
                        android:layout_marginEnd="@dimen/eight_dp"
                        android:layout_marginStart="@dimen/eight_dp"
                        android:layout_marginTop="@dimen/eight_dp"
                        android:background="@color/rv_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/eight_dp"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:text="@string/trailers"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rv_reviews" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_trailers"
                        android:layout_width="match_parent"
                        android:background="@color/rv_background"
                        android:layout_height="@dimen/two_hundred_dp"
                        android:layout_marginBottom="@dimen/eight_dp"
                        android:layout_marginStart="@dimen/eight_dp"
                        android:layout_marginTop="@dimen/eight_dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                </android.support.constraint.ConstraintLayout>

            </ScrollView>
        </android.support.v4.widget.NestedScrollView>


    </android.support.design.widget.CoordinatorLayout>
</layout>